# stm32_cpp

./: .gitignore  .sconsign.dblite  AC++11-501.code-workspace  AC++11-501.jdebug  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake  reset-project.sh
.devcontainer/: devcontainer.json
drivers/: Bit_ops.h  CMakeLists.txt  Memory_map.h  Peripherals.cpp  Peripherals.h  Register.h  Time_utils.cpp  Time_utils.h  USART_utils.cpp
gdb-scripts/: gdb_command_file  gdb_command_file_run_to_completion  target_gdb_init
ldscripts/: mem-qemu.ld  mem.ld  sections.ld
qemu-scripts/: GPIOD.ppm  run_gdb.sh  run_gdb_serial.sh  run_gdb_with_trace.sh  run_leds.sh  run_leds_gdb.sh  run_qemu.sh  run_qemu_serial.sh  run_wms_gdb.sh
src/: main.cpp
system/: CMakeLists.txt
system/include/arm/: semihosting.h
system/include/cmsis/: cmsis_gcc.h
system/src/diag/: trace_impl.c
system/src/newlib/: _exit.c  _syscalls.c
